# next

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README-dev.md  README.md  package.json  sage_sbom.json  sage_sbom3.xml
foresight/: #_env.sh#  .env  .gitignore  Graph.gv  KernelProxyBlocking.py  README.md  Tasks  _env.sh  _env.sh.bak  alignment_strategies.py  alignment_stratgies.py  board.py  celery_tasks.py  config.json~  config_docker.json  docker-compose-proxy.yml  docker-compose-proxy.yml~  documentation.md  job_scheduler.py  jupyterkernelproxy.py  jupyterkernelproxy_blocking.py  jupyterkernelproxy_client.py  jupyterkernelproxy_server.py  jupyterkernelproxy_v2.py  linked_app.py  nohup.out  notes.txt  proxy.py  proxy_room.py  pyproject.toml  requirements.old  requirements.txt  room.py  setup.py  smartbitcollection.py  smartbitfactory.py  smartbits_utils.py  task_scheduler.py  temp.py  temp_proxy_remove.py  (+3 more)
foresight/AI/: ai_client.py  ai_server.py  config.json  config.json~  notes.txt~
foresight/SAGE3Sugar/: pysage3.py  requirements.txt  setup.py
foresight/Sage3Sugar/: pysage3.py
foresight/_docker_scripts/: .env  docker-compose-proxy.yml  monitor_room_activity.py  start-head.sh  start-proxy.sh  test.py
foresight/ai/: ai_client.py  ai_server.py
foresight/config/: #__init__.py#  __init__.py  __init__.py~  config.json  config.py~
foresight/docker_info/: docker-compose-proxy.yml~  start.sh  start.sh~  test.py
foresight/foresight/: .gitignore  KernelProxyBlocking.py  README.md  alignment_strategies.py  board.py  celery_tasks.py  (+8 more)
(+2078 files in other folders)
